Use emoji instead of png

--- a/docs/02.install/40.post_install/05.configuration.mdx
+++ b/docs/02.install/40.post_install/05.configuration.mdx
@@ -125,6 +125,6 @@ For more detailed instructions, or to lean more about SSL/TLS certificates, see 
   </TabItem>
 </Tabs>
 
-## <img src="/img/tada.png" height="30"/> Congratz!
+## 🎉 Congratz!
 
 You now have a pretty well configured server. If you're new to YunoHost, we recommend to have a look at [the guided tour](/category/overview). You should also be able to [install your favourite applications](https://apps.yunohost.org/). Don't forget to [plan backups](/category/backups) !
