--- a/docs/03.administer/45.tutorials/25.external_storage.mdx
+++ b/docs/03.administer/45.tutorials/25.external_storage.mdx
@@ -254,6 +254,6 @@ rm -Rf /home/yunohost.app.bkp
 rm -Rf /var/mail.bkp
 ```
 
-## <img src="/img/tada.png" height="32rem"/> Congratulations!
+## 🎉 Congratulations!
 
 If you have made it this far without damage, you now have a server that takes advantage of one or more storage disks.
