Use faicon instead of img in title

--- a/docs/02.install/20.install_on/raspberry_pi.mdx
+++ b/docs/02.install/20.install_on/raspberry_pi.mdx
@@ -30,7 +30,7 @@ If you wish to check the validity of our signed images, you can [download our pu
 
 <YunoHostImagesList hardware="rpi345"/>
 
-## <img src="/img/sdcard_with_adapter.png" height="40" alt="microSD card with adapter"/> Flash the YunoHost image
+## <FAIcon icon="fa-regular fa-floppy-disk"/> Flash the YunoHost image
 
 Now that you downloaded the image of YunoHost, you should flash it on a microSD card
 
