--- a/docs/02.install/20.install_on/arm_board.mdx
+++ b/docs/02.install/20.install_on/arm_board.mdx
@@ -37,7 +37,7 @@ If you wish to check the validity of our signed images, you can [download our pu
 
 <YunoHostImagesList hardware="arm"/>
 
-## <FAIcon icon="fa-regular fa-floppy-disk"/> Flash the Armbian image
+## <FAIcon icon="sim-card"/> Flash the Armbian image
 
 Now that you downloaded the image of Armbian, you should flash it on a microSD card
 
