--- a/docs/02.install/20.install_on/raspberry_pi.mdx
+++ b/docs/02.install/20.install_on/raspberry_pi.mdx
@@ -30,7 +30,7 @@ If you wish to check the validity of our signed images, you can [download our pu
 
 <YunoHostImagesList hardware="rpi345"/>
 
-## <FAIcon icon="fa-regular fa-floppy-disk"/> Flash the YunoHost image
+## <FAIcon icon="fa-sim-card"/> Flash the YunoHost image
 
 Now that you downloaded the image of YunoHost, you should flash it on a microSD card
 
