Use faicon instead of img in title

--- a/docs/02.install/20.install_on/regular_computer.mdx
+++ b/docs/02.install/20.install_on/regular_computer.mdx
@@ -34,7 +34,7 @@ If you wish to check the validity of our signed images, you can [download our pu
 
 <YunoHostImagesList hardware="regular"/>
 
-## <img src="/img/usb_key.png" height="50" style={{verticalAlign: "middle"}} /> Flash the YunoHost image
+## <FAIcon icon="fa-brands fa-usb"/> Flash the YunoHost image
 
 Now that you downloaded the image of YunoHost, you should flash it on a USB stick or a CD/DVD.
 
