--- a/docs/06.contribute/index.mdx
+++ b/docs/06.contribute/index.mdx
@@ -27,7 +27,7 @@ import Link from '@docusaurus/Link';
   </Column>
 
   <Column className='text--center'>
-  Our support relies on contributors like you. Just come to [the support chatroom](/community/help) and help new users getting started, or pick a question on the <a href="https://forum.yunohost.org/" target="_blank">Forum</a>.
+  Our support relies on contributors like you. Just come to [the support chatroom](/community/help) and help new users getting started, or pick a question on the <Link to="https://forum.yunohost.org/" target="_blank">Forum</Link>.
   </Column>
 </Columns>
 
@@ -90,7 +90,7 @@ import Link from '@docusaurus/Link';
 
   <Column className='text--center'>
     You can involve in the YunoHost's development regardless of your skill.
-    Sysadmins, web developers, designers and pythonists <a href="https://github.com/YunoHost" target="_blank">are welcome</a>!  
+    Sysadmins, web developers, designers and pythonists <Link to="https://github.com/YunoHost" target="_blank">are welcome</Link>!  
     Learn [how to contribute](/contribute/dev/), and join us on the [development chat room](xmpp:dev@conference.yunohost.org?join).
   </Column>
 </Columns> 
