--- a/docs/02.install/index.mdx
+++ b/docs/02.install/index.mdx
@@ -1,3 +1,5 @@
+import Link from '@docusaurus/Link';
+
 # Choose your selfhosting method and providers
 
 You can host yourself at home (on a small computer), or on a remote server. Each solution has their pros and cons:
