reuse translations: finish admin_guide

--- a/i18n/fr/docusaurus-plugin-content-docs/current/02.install/20.install_on/index.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/02.install/20.install_on/index.mdx
@@ -1,10 +1,10 @@
 ---
-title: Install on...
+title: Installer sur...
 ---
 
 import DocCardList from '@theme/DocCardList'
 import { useCurrentSidebarCategory } from '@docusaurus/theme-common'
 
-Select the hardware on which you want install YunoHost:
+Sélectionnez le matériel sur lequel vous voulez installer YunoHoste :
 
 <DocCardList items={useCurrentSidebarCategory().items} />
