--- a/i18n/it/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/55.upgrade/11.buster_bullseye_migration.md
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/55.upgrade/11.buster_bullseye_migration.md
@@ -1,64 +1,58 @@
 ---
-title: Migrating from 4.x to 11.x
+title: Migrer de 4.x vers 11.x
 ---
 
-This page is dedicated to help you migrating an instance from YunoHost 4.4.x (running on Debian Buster/10.x) to YunoHost 11.x (running on Debian Bullseye/11.x). Note: we decided to skip the version numbers from 5 to 10 to follow the Debian version numbers.
+L'objectif cette page est de décrire le processus de migration d'une instance en YunoHost 4.4.x (tournant sous Debian Buster/10.x) vers YunoHost 11.x (tournant sous Debian Bullseye/11.x). Notez que nous avons décidé de sauter les numéros de versions de 5 à 10 pour suivre les numéros de versions de Debian.
 
-## Important notes
+## Notes importantes
 
-- The YunoHost team did its best to make sure that the migration is as smooth as possible and was tested over the course of several months in several cases.
+- L'équipe de YunoHost a fait de son mieux pour que cette migration se passe autant en douceur que possible. Elle a été testée durant plusieurs mois et sur plusieurs types d'installations.
 
-- With that said, please be aware that this is a delicate operation. System administration is a complicated topic and covering every particular case is quite hard. Therefore, if you host critical data and services, please [make backups](/category/backups). And in any case, be patient and attentive during the migration.
+- Néanmoins, vous devez être conscient qu'il s'agit d'une opération délicate. L'administration système est un sujet compliqué et couvrir tous les cas particuliers n'est pas chose aisée. En conséquence, si vous hébergez des données et des systèmes critiques, [faites des sauvegardes](/category/backups). Et dans tous les cas, soyez patients et attentifs durant la migration.
 
-- Please don't rush into thinking that you should need to reinstall your system from scratch thinking it would be "simpler" (sigh). (A common attitude is to be willing to reinstall a server at the slightest complication...). Instead, if you happen to run into issues, we encourage you to try to investigate and understand what's going on and [reach for help on the chat and the forum](/community/help).
+- Ne vous précipitez pas à vouloir faire une réinstallation de votre système en pensant que cela serait "plus simple" (sigh). (Une attitude qui revient régulièrement est de vouloir réinstaller son système à la moindre complication...). À la place, si vous rencontrez des problèmes, nous vous encourageons à investiguer, chercher à comprendre et [trouver de l'aide sur le chat ou le forum](/community/help).
 
-- **You should watch the known issues at the bottom of this page, to be sure your migrations will work properly.**
+## Procédure de migration
 
-## Migration procedure
+### Depuis la webadmin
 
-### From the webadmin
+Après avoir mis à jour vers la version en 4.4.x, allez dans Outils > Migrations pour accéder à l'interface de migration. Il vous faudra ensuite lire l'avertissement attentivement et l'accepter pour lancer la migration.
 
-After upgrading to 4.4.x, go to Tools > Migrations to access the migrations interface. You will have to read carefully and accept the disclaimer then launch the migration.
+### Depuis la ligne de commande
 
-### From the command line
-
-After upgrading to 4.4.x, run:
+Après avoir mis à jour vers la version 4.4.x, lancez :
 
 ```bash
-sudo yunohost tools migrations run
+sudo yunohost tools migrations migrate
 ```
 
-then read carefully and accept the disclaimer.
+puis lisez attentivement l'avertissement et les instructions.
 
-## During the migration
+## Pendant la migration
 
-Depending on your hardware and packages installed, the migration might take up to a few hours.
+En fonction de votre matériel et des paquets installés, la migration peut prendre jusqu'à une ou deux heures.
 
-The logs will be shown in the message bar (you can hover it to see the whole history). They will also be available after the migration (like any other operations) in Tools > Logs.
+Les logs seront affichés dans la barre de message au centre de la page (vous pouvez approcher la souris dessus pour voir l'historique en entier). Ils seront également consultable après coup (comme les autres opérations) dans Outils > Journaux.
 
-Note that even if you close the webadmin page for some reason, the migration will continue in the background (but the webadmin will be partially unavailable).
+Notez que même si vous fermez la page d'admin, la migration continuera (par contre l'interface d'admin sera partiellement indisponible).
 
-### If the migration crashed / failed at some point
+### Si la migration a crashé / échoué à un moment
 
-If the migration failed at some point, it should be possible to relaunch it. If it still doesn't work, you can try to [get help](/community/help) (please provide the corresponding messages or whatever makes you say that it's not working).
+Si la migration a échoué a un moment donné, la première chose à faire est de tenter de la relancer. Si cela ne fonctionne toujours pas, il vous faut [trouver de l'aide](/community/help) (prière de fournir le/les messages correspondants ou tout élément qui vous fait penser que ça n'a pas marché).
 
-## What to do after the upgrade
+## Choses à vérifier après la migration
 
-### Check that you actually are on Debian Bullseye and YunoHost 11.x
+### Exécuter la migration pour réparer votre application python
 
-For this, go to Diagnosis (category Base system) or look at the footer of the webadmin. In the command line, you can use `lsb_release -a` and `yunohost --version`.
+Après la mise à jour, vos applications python devraient être indisponibles car leur environnement virtuel doit être reconstruit.
 
-### Run the migration to repair your python app
+Pour ce faire, vous pouvez exécuter les migrations en cours dans `Webadmin > Mises à jour`. Les applications ci-dessous ne seront pas réparées automatiquement, vous devez les mettre à jour manuellement avec `yunohost app upgrade -F APP`.
 
-After upgrading, your python apps should be unavailable because their virtual environment (venv) needs to be rebuilt.
-
-To do that you can run the pending migrations in `Webadmin > Update`. The apps below won't be automatically repaired, you need to force-upgrade them manually instead with `yunohost app upgrade -F APP`.
-
-Apps which won't be automatically repaired and need a force upgrade:
+Les applications qui ne seront pas réparées automatiquement et nécessitent une mise à jour forcée :
 
 - calibreweb
 - django-for-runners
-- ffsync (this app is in python2 and no longer maintained, no guarantee)
+- ffsync (cette application est en python2 et n'est plus maintenue, aucune garantie)
 - jupiterlab
 - librephotos
 - mautrix
@@ -69,57 +63,26 @@ Apps which won't be automatically repaired and need a force upgrade:
 - synapse
 - weblate
 
-:::tip
-If needed, you can disable the automatic rebuild for a specific python app, by removing the dedicated file ending with `.requirements_backup_for_bullseye_upgrade.txt` before applying the migration. You can find this file near the venv (Python virtual environment) of your app inside `/opt` or `/var/www`.
-:::
+! !! Si nécessaire, vous pouvez désactiver la reconstruction automatique pour une application python spécifique, en supprimant le fichier dédié terminé par `.requirements_backup_for_bullseye_upgrade.txt` avant d'appliquer la migration. Vous pouvez trouver ce fichier près du venv de votre application dans `/opt` ou `/var/www`.
 
-### Check that no issue appeared in the diagnosis
+### Vérifiez que vous êtes véritablement sous Debian Bullseye et YunoHost 11.x
 
-Also in the webadmin Diagnosis section, make sure that no specific issue appeared after running the migration (for example a service that crashed for some reason).
+Pour cela, vous pouvez aller dans la partie Diagnostic (section Système de base). (Vous pouvez aussi regarder ce qui est affiché à droite dans le pied de page de la webadmin). En ligne de commande, vous pouvez aussi utiliser `lsb_release -a` et `yunohost --version`.
 
-If the service `php7.3-fpm` appears to be dead, you should upgrade your PHP apps like the custom web app. Next, you can run `apt autoremove`.
+### Vérifiez que le diagnostic ne rapporte pas de problème particulier
 
-### Check that your applications are working
+Également dans la section Diagnostic de la webadmin, vérifiez qu'il n'y a pas de problème apparu suite à la migration (par exemple un service qui ne tournerais plus...)
 
-Test that your applications are working. If they aren't, you should try to upgrade them (it is also a good idea to upgrade them even if they are working anyway).
+### Vérifiez que les applications fonctionnent
 
-If your app is broken and you were already with the latest version, you can rerun the upgrade thanks to the `-F|--force` option:
+Vérifiez que vos applications installées fonctionnent... Si elles ne fonctionnent pas, il est recommandé de tenter de les mettre à jour. (ou bien de manière générale, il est recommandé de les mettre à jour même si elles fonctionnent !).
 
-```bash
-yunohost app upgrade --force APP_NAME
-```
-
-## Current known issues after the migration
-
-### Can't run the migration due to `libc6-dev : Breaks: libgcc-8-dev issue`
-
-Note: This issue should be resolved in `yunohost_version`: `4.4.2.13`
-You have an app that depends on the `build-essential` package.
-
-See this [solution](https://forum.yunohost.org/t/migration-to-11-wont-start-libc6-dev-breaks-libgcc-8-dev/20617/42) to fix it manually
-
-### DNSmasq is not running anymore
-
-We haven't yet found  solution for this issue.
-
-### No ethernet connexion after rebooting following a migration on a Raspberry Pi 4
-
-:::warning
-If you have not yet rebooted your server, don't do it (we are looking for a solution). This will avoid you the use of a keyboard and screen.
-:::
-
-We found this in the Raspberry Pi documentation
-
-> when the dhcpcd5 package is updated to the latest version (1:8.1.2-1+rpt1 -> 1:8.1.2-1+rpt2), the Raspberry Pi will fail to obtain a DHCP IP address following the next reboot or startup. This problem can be avoided by disabling and re-enabling the "System Options -> Network at Boot" option using the latest raspi-config after the dhcpcd5 package has been updated and prior to the system being shutdown or rebooted
-
-If you are using a Raspberry Pi 4 (or maybe 3), see this [solution](https://forum.yunohost.org/t/aucun-acces-a-internet-suite-a-migration-4-4-to-11-depuis-raspberry-pi-4-pi-400/20652/17)
-
-### Restore ynh4 backup onto a fresh ynh11
-
-If you can't restore your app but your system has been restored, you probably should use the regen conf to fix the nginx issues:
+Si votre app est cassée et que vous étiez déjà sur la dernière version d'une application, vous pouvez relancer la mise à jour grâce à l'option `--force`:
 
 ```bash
-yunohost tools regenconf nginx --force
+yunohost app upgrade --force NOM_APP
 ```
 
-After that you should be able to restore your apps. Don't forget to force upgrade them if you have 502 errors.
+## Soucis (mineurs) connus après la migration
+
+Voir la [page anglaise](https://yunohost.org/en/buster_bullseye_migration#current-known-minor-issues-after-the-migration)
