--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/55.upgrade/12.bullseye_bookworm/05.issues_faq/05.issues_faq.md
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/55.upgrade/12.bullseye_bookworm/05.issues_faq/05.issues_faq.md
@@ -1,5 +1,5 @@
 ---
-title: Migration isues FAQ
+title: Problèmes de migration FAQ
 ---
 
 This page lists all the known issues encountered after a migration from YunoHost 11 to 12.
