--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/55.upgrade/55.upgrade.md
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/55.upgrade/55.upgrade.md
@@ -1,27 +1,27 @@
 ---
-title: Upgrades
+title: Mises à jour
 ---
 
-## From the webadmin
+## Depuis la webadmin
 
-On the administraton panel, click on Upgrade the system. YunoHost will refresh the system package catalog as well as the application catalog, and display available upgrades.
+Dans la partie administration, choisir Mettre à jour le système. YunoHost va mettre à jour le catalogue des paquets système et le catalogue des applications, et afficher les mise à jour disponibles.
 
-Click on green upgrade buttons to upgrade the system and applications.
+Cliquez sur les boutons verts pour lancer les mises à jour du système et des applications.
 
-## From the command line
+## Depuis la ligne de commande
 
-Here are some example of corresponding command lines:
+Voici quelques exemples en ligne de commande correspondants :
 
 ```bash
-# Fetch available updates
+# Aller chercher les mises à jour disponibles
 yunohost tools update
 
-# Upgrade all system packages
+# Mettre à jour tous les paquets systèmes
 yunohost tools upgrade system
 
-# Upgrade all apps
+# Mettre à jour toutes les applications
 yunohost tools upgrade apps
 
-# Upgrade a specific application
+# Mettre à jour une application en particulier
 yunohost app upgrade wordpress
 ```
