--- a/i18n/it/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/55.upgrade/55.upgrade.md
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/55.upgrade/55.upgrade.md
@@ -1,27 +1,27 @@
 ---
-title: Upgrades
+title: Aggiornamenti
 ---
 
-## From the webadmin
+## Dalla pagina webadmin
 
-On the administraton panel, click on Upgrade the system. YunoHost will refresh the system package catalog as well as the application catalog, and display available upgrades.
+Nella sezione amministrazione, scegliere Aggiorna il sistema. YunoHost aggiornerà il catalogo dei pacchetti di sistema e il catalogo delle applicazioni installate e visualizzerà gli aggiornamenti disponibili.
 
-Click on green upgrade buttons to upgrade the system and applications.
+Premete i pulsanti verdi per avviare gli aggiornamenti.
 
-## From the command line
+## Da linea di comando
 
-Here are some example of corresponding command lines:
+Ecco alcuni esempi da linea di comando:
 
 ```bash
-# Fetch available updates
+# Visualizzare gli aggiornamenti disponibili
 yunohost tools update
 
-# Upgrade all system packages
+# Aggiornare il sistema
 yunohost tools upgrade system
 
-# Upgrade all apps
+# Aggiornare tutte le applicazioni installate
 yunohost tools upgrade apps
 
-# Upgrade a specific application
+# Aggiornare una specifica applicazione
 yunohost app upgrade wordpress
 ```
