--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/55.upgrade/12.bullseye_bookworm/12.bullseye_bookworm.md
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/15.admin_guide/55.upgrade/12.bullseye_bookworm/12.bullseye_bookworm.md
@@ -1,80 +1,78 @@
 ---
-title: Migrating from 11.x to 12.x
+title: Migrer de 11.x vers 12.x
 ---
 
-This page is dedicated to help you migrating an instance from YunoHost 11.x (running on Debian Bullseye) to YunoHost 12 (running on Debian Bookworm).
+L'objectif cette page est de décrire le processus de migration d'une instance en YunoHost 11.x (tournant sous Debian Bullseye) vers YunoHost 12.x (tournant sous Debian Bookworm).
 
-## Important notes
+## Notes importantes
 
-- The YunoHost team did its best to make sure that the migration is as smooth as possible and was tested over the course of several months in several cases.
+- L'équipe de YunoHost a fait de son mieux pour que cette migration se passe autant en douceur que possible. Elle a été testée durant plusieurs mois et sur plusieurs types d'installations.
 
-- Please [backup your data and server](/category/backups)! This migration is a complex operation and covering every pitfall is quite hard. And in any case, be patient and attentive during the migration.
+- [Faites des sauvegardes](/category/backups) de votre serveur et de vos données ! Cette migration est une opération complexe et éviter tous les problèmes possibles est difficile. Dans tous les cas, soyez patients et attentifs durant la migration.
 
-- Please don't rush into thinking that you should need to reinstall your system from scratch thinking it would be "simpler" (sigh). (A common attitude is to be willing to reinstall a server at the slightest complication...). Instead, if you happen to run into issues, we encourage you to try to investigate and understand what's going on and [reach for help on the chat and the forum](/community/help).
+- Ne vous précipitez pas à vouloir faire une réinstallation de votre système en pensant que cela serait "plus simple" (sigh). (Une attitude qui revient régulièrement est de vouloir réinstaller son système à la moindre complication...). À la place, si vous rencontrez des problèmes, nous vous encourageons à investiguer, chercher à comprendre et [trouver de l'aide sur le chat ou le forum](/community/help).
 
-- **You should watch the known issues at the bottom of this page, to be sure your migrations will work properly.**
+## Procédure de migration
 
-## Migration procedure
+Vous devez d'abord vous assurer que votre système est à jour. La migration est disponible à partir de la version 11.3.
 
-You first need to ensure your system is up to date. The migration is available starting with the version 11.3.
+Il est recommendé de lancer la migration depuis la ligne de commande, mais elle peut très bien être effectuée depuis la webadmin.
 
-It is recommended to run the migration from the command line, but it can still be done from the webadmin.
+### Depuis la webadmin
 
-### From the webadmin
+Allez dans Outils > Migrations pour accéder à l'interface de migration. Il vous faudra ensuite lire l'avertissement attentivement et l'accepter pour lancer la migration.
 
-Go to Tools > Migrations to access the migrations interface. You will have to read carefully and accept the disclaimer then launch the migration.
+Notez que même si vous fermez la page d'admin, la migration continuera (par contre l'interface d'admin sera partiellement indisponible).
 
-Note that even if you close the webadmin page for some reason, the migration will continue in the background (but the webadmin will be partially unavailable).
+### Depuis la ligne de commande
 
-### From the command line
-
-Just run :
+Lancez simplement :
 
 ```bash
-sudo yunohost tools migrations run
+sudo yunohost tools migrations migrate
 ```
 
-then read carefully and accept the disclaimer.
+puis lisez attentivement l'avertissement et les instructions.
 
-## During the migration
+## Pendant la migration
 
-Depending on your hardware and packages installed, the migration might take up to a few hours.
+En fonction de votre matériel et des paquets installés, la migration peut prendre jusqu'à une ou deux heures.
 
-The logs will be shown in the message bar (you can hover it to see the whole history). They will also be available after the migration (like any other operations) in Tools > Logs.
+Les logs seront affichés dans la barre de message au centre de la page (vous pouvez approcher la souris dessus pour voir l'historique en entier). Ils seront également consultable après coup (comme les autres opérations) dans Outils > Journaux.
 
-### If the migration crashed / failed at some point
+### Si la migration a crashé / échoué à un moment
 
-If the migration failed at some point, it should be possible to relaunch it. If it still doesn't work, you can try to [get help](/community/help) (please provide the corresponding messages or whatever makes you say that it's not working).
+Si la migration a échoué a un moment donné, la première chose à faire est de tenter de la relancer. Si cela ne fonctionne toujours pas, il vous faut [trouver de l'aide](/community/help) (prière de fournir le/les messages correspondants ou tout élément qui vous fait penser que ça n'a pas marché).
 
-## What to do after the upgrade
+## Choses à vérifier après la migration
 
-### Check that you actually are on Debian Bookworm and YunoHost 12.x
+### Vérifier la version de Debian et YunoHost
 
-For this, go to Diagnosis (category Base system) or look at the footer of the webadmin. In the command line, you can use `lsb_release -a` and `yunohost --version`.
+Pour cela allez dans l'outil de diagnostics ou regardez en bas de la page de la webadmin. En ligne de commande vous pouvez utiliser `lsb_release -a` et `yunohost --version`.
 
-### Run the new pending migrations
+### Exécuter les nouvelles migrations
 
-Some more migrations appeared after the upgrade:
+Après la mise à niveau, de nouvelles migrations sont apparues :
 
-- Rebuilding the virtualenvs of your Python apps
-- Migrate from PostgreSQL 13 to 15
+- La recréation des virtualenvs de vos applis Python
+- La migration de PostgreSQL 13 à 15
 
-You should run those as soon as possible to ensure your apps work properly.
+Vous devez les lances le plus tôt possible pour garantir le bon fonctionnement de vos applis.
 
-### Check the Diagnosis
+### Vérifiez que le diagnostic ne rapporte pas de problème particulier
 
-In the webadmin Diagnosis section, make sure that no specific issue appeared after running the migration (for example a service that crashed for some reason).
+Dans l'outil de diagnostics de la webadmin, vérifiez qu'il n'y a pas de problème apparu suite à la migration (par exemple un service qui ne tournerais plus...)
 
-### Check that your applications are working
+### Vérifiez que les applications fonctionnent
 
-Test that your applications are working. If they aren't, you should try to upgrade them (it is also a good idea to upgrade them even if they are working anyway).
+Vérifiez que vos applications installées fonctionnent... Si elles ne fonctionnent pas, il est recommandé de tenter de les mettre à jour. (ou bien de manière générale, il est recommandé de les mettre à jour même si elles fonctionnent !).
 
-If your app is broken and you were already with the latest version, you can rerun the upgrade thanks to the `-F|--force` option:
+Si votre app est cassée et que vous étiez déjà sur la dernière version d'une application, vous pouvez relancer la mise à jour grâce à l'option `--force`:
 
 ```bash
-yunohost app upgrade --force APP_NAME
+yunohost app upgrade --force NOM_APP
 ```
 
-## Current known issues after the migration
+## Soucis connus après la migration
 
-Please check the [issues FAQ](/administer/admin_guide/upgrade/bullseye_bookworm/issues_faq/).
+Veuillez consulter [la FAQ des problèmes de migration](/administer/admin_guide/upgrade/bullseye_bookworm/issues_faq/) (en anglais).
