--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/20.backups/05.evaluate.md
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.administer/20.backups/05.evaluate.md
@@ -1,61 +1,61 @@
 ---
-title: Backup strategies
+title: Stratégies de sauvegarde
 ---
 
-In the context of self-hosting, backups are an important element to compensate for unexpected events (fire, database corruption, loss of access to the server, compromised server...). The backup policy to implement depends on the importance of the services and data you manage. For example, backing up a test server will be of little interest, while you will want to be very careful if you are managing critical data for an association or a company - and in such cases, you will want to store the backups *in a different location or locations*.
+Dans le contexte de l'auto-hébergement, les sauvegardes (backup) sont un élément important pour pallier les événements inattendus (incendies, corruption de base de données, perte d'accès au serveur, serveur compromis...). La politique de sauvegardes à mettre en place dépend de l'importance des services et des données que vous gérez. Par exemple, sauvegarder un serveur de test aura peu d'intérêt, tandis que vous voudrez montrer beaucoup plus de prudence si vous gérez des données critiques pour une association ou une entreprise - et dans ce genre de cas, vous souhaiterez stocker les sauvegardes *dans un ou des endroits différents*.
 
-## What is a good backup ?
+## Qu'est-ce qu'une bonne sauvegarde ?
 
-A good backup consists of at least **3 copies of the data** (including the original data), on at least **2 separate storages**, in at least **2 separate locations** (far enough apart) and ideally with 2 separate methods. If your backups are encrypted **these rules also apply to the decryption phrase/key**.
+Une bonne sauvegarde est constituée d'au moins **3 copies des données** (en comptant les données originales), sur au moins **2 stockages distincts**, dans au moins **2 lieux distincts** (suffisamment éloignés) et idéalement avec 2 méthodes distinctes. Si vos sauvegardes sont chiffrées **ces règles s'appliquent aussi à la phrase/clé de déchiffrement**.
 
-A good backup is also in many cases, a recent backup, so it takes either a lot of rigor or to **automate** the process.
+Une bonne sauvegarde est aussi dans de nombreux cas, une sauvegarde récente, il faut donc soit beaucoup de rigueur, soit **automatiser** le processus.
 
-A good backup is checked regularly to ensure the effectiveness and integrity of the data.
+Une bonne sauvegarde est vérifiée régulièrement afin de s'assurer de l'effectivité et de l'intégrité des données.
 
-Finally, a good backup is one that is **restorable within an acceptable timeframe** for you. Remember to document your restoration method and to estimate the transfer time of a copy, especially if the Internet connections involved are not symmetrical.
+Enfin, une bonne sauvegarde est une sauvegarde **restaurable dans des délais acceptables** pour vous. Pensez notamment à documenter votre méthode de restauration et à estimer le temps de transfert d'une copie notamment si les connexions internet en jeu ne sont pas symétriques.
 
 :::info
-Example of **a robust and comfortable combination**:
+Exemple d'**une combinaison** robuste et comfortable:
 
-- a remote and automatic backup with borg
-- a backup on external disk and automatic with borg
-- a regular snapshot/image (and before updates)
-- a monitored RAID 1 array (or a commercial VPS that will also be on an array)
-- a decryption passphrase stored on 3 media in 2 locations
+- une sauvegarde distante et automatique avec borg
+- une sauvegarde sur disque externe et automatique avec borg
+- un snapshot/image régulier (et avant les mises à jour)
+- une grappe RAID 1 monitorée (ou un VPS du commerce qui sera aussi sur une grappe)
+- une passphrase de déchiffrement stockée sur 3 supports dans 2 lieux
 :::
 
-## Some possible methods
+## Quelques méthodes possibles
 
-- [generate an archive and download it manually (default method of YunoHost)](/administer/backups/#manual-backup)
-- [backup automatically (recommended method)](/administer/backups/backup_methods)
-- [generate an archive directly on another disk](/administer/tutorials/external_storage)
-- [make a disk image or snapshot](/administer/backups/clone_filesystem)
-- [save useful data via a custom method](/administer/backups/custom_backup_methods)
+- [générer une archive et la télécharger manuellement (méthode par défaut de YunoHost)](/administer/backups/#sauvegarde-manuelle)
+- [sauvegarder automatiquement (méthode conseillée)](/administer/backups/backup_methods)
+- [générer une archive directement sur un autre disque](/administer/tutorials/external_storage)
+- [faire une image du disque ou un snapshot](/administer/backups/clone_filesystem)
+- [sauvegarder les données utiles via une méthode personnalisée](/administer/backups/custom_backup_methods)
 
-## Risks
+## Risques
 
-Below, a list of risks sorted from the most to the least probable, whose probability remains to be adapted according to your situation (location of the server, quality of the installations, user profiles, etc.). It is up to you to put the cursor where it should be, especially considering the consequences of a data loss.
+Ci-dessous, une liste de risques triés du plus au moins probable, dont la probabilité reste à adapter selon votre situation (lieu du serveur, qualité des installations, profils d'usagers, etc.). À vous de mettre le curseur là où il faut, notamment en considérant les conséquences d'une perte de données.
 
 :::caution
-Keep in mind that real accidents are linked to the occurrence of 2 events simultaneously.
+Gardez en tête que les vrais accidents sont liés à la survenue de 2 événements de façon simultanée.
 :::
 
-- **Lack of rigor**: strategies based on manual backups require a lot of rigor in the regularity
-- **Bad handling**: it can happen that a backup is erased by mistake during a restoration or if you rely on a synchronization system, you could delete a file and the deletion would be synchronized instantly
-- **Cryptolocker**: this is a virus that encrypts files and demands a ransomware. If your users are using nextcloud and windows, an infected windows could synchronize encrypted files and thus you lose your copy.
-- **Hardware failure**: SD cards are the least reliable media over time (~2 years of life in a server), followed by SSD disks (about 3 years of life) and hard drives (3 years). Note that a new equipment has also probability to break down during the first 6 months. In all cases, your copies should not be on the same physical media.
-- **Software failure/bug**: a software bug may result in data deletion or you may not know how to fix a problem and want to restore your system.
-- **Electricity or internet failure**: do you have a plan if this happens? What if you are on vacation?
-- **Disaster or natural or unnatural event**: a small child, a cat, lightning or a simple leak can destroy your equipment. Fires or floods can also destroy your backup copy at the other end of your home...
-- **Server compromise**: a malicious person or a robot could attack your server and delete your data
-- **Machine theft**: a burglary or theft of a computer on which your password manager is located to decrypt your backups
-- **Search**: whether you are guilty or not, a search can result in the seizure of the entire computer equipment of a place (or even several)
-- **Death/health problem**: you may not be able to type your passphrase anymore
+- **Manque de rigueur**: les stratégies à base de sauvegardes manuelles nécessitent beaucoup de rigueur dans la régularité
+- **Mauvaise manipulation**: il peut arriver d'effacer une sauvegarde par erreur lors d'une restauration ou si vous comptez sur un système de synchronisation, vous pourriez supprimer un fichier et que la suppression soit synchronisée de façon instantanée
+- **Cryptolocker**: il s'agit de virus qui chiffrent les fichiers et réclament une rançon. Si vos utilisateurs ou utilisatrices utilisent nextcloud et windows, un windows infecté pourrait synchroniser des fichiers chiffrés et ainsi vous perdriez votre copie.
+- **Panne matérielle**: les cartes SD sont les supports les moins fiables dans le temps (~2ans de vie dans un serveur), viennent ensuite les disques SSD (environ 3 ans de vie) et les disques durs (3 ans). À noter qu'un équipement neuf a aussi une probabilité non nulle de tomber en panne lors des 6 premiers mois. Dans tous les cas, vos copies ne devraient pas être sur le même support physique.
+- **Panne logicielle/bug**: un bug logiciel peut aboutir à la suppression de données ou vous pourriez ne pas savoir réparer un problème et souhaiter restaurer votre système.
+- **Panne d'électricité ou d'internet**: avez-vous un plan si ça arrive ? Quid si vous êtes en vacances ?
+- **Catastrophe ou événement naturel ou non**: un petit enfant, un chat, la foudre ou une simple fuite peuvent détruire votre matériel. Les incendies ou inondations peuvent aussi mettre à mal votre copie de sauvegarde à l'autre bout de votre logement...
+- **Compromission du serveur**: une personne malveillante ou un robot pourrait attaquer votre serveur et supprimer vos données.
+- **Vol de machine**: un cambriolage ou le vol d'un ordinateur sur lequel se trouve votre gestionnaire de mots de passe pour déchiffrer vos sauvegardes.
+- **Perquisition**: que vous soyez coupable ou non, une perquisition peut aboutir à la saisie entière du matériel informatique d'un lieu (voir de plusieurs lieux).
+- **Décès/problème de santé**: vous pourriez ne plus être en mesure de taper votre phrase de passe.
 
-## About Nextcloud or Thunderbird (IMAP) synchronization
+## À propos de la synchronisation Nextcloud ou Thunderbird (IMAP)
 
-A method that allows a partial backup is to backup files and emails via synchronization software like Nextcloud client or ThunderBird. This way, you avoid the risk of hardware failure.
+Une méthode qui permet une sauvegarde partielle consiste à sauvegarder les fichiers et les emails via des logiciels de synchronisation comme Nextcloud client ou ThunderBird. De cette façon, vous évitez le risque de panne matérielle.
 
-If this method is easy to set up, it is not without risk because of the synchronization itself. For example, if you are on Windows or Mac, you increase the risk of data loss following the encryption of files by a [cryptolocker](https://en.wikipedia.org/wiki/Ransomware) type virus. On any type of system, a false manipulation can delete all your copies on the server and on the equipment that synchronizes. This concern is aggravated by the fact that the deletion synchronization is usually rather instantaneous.
+Si cette méthode est simple à mettre en place, elle n'est pas sans risque du fait de la synchronisation elle-même. Par exemple, si vous êtes sur windows ou mac, vous augmentez de façon non négligeable le risque de perte de données suite au chiffrement des fichiers par un virus de type [cryptolocker](https://fr.wikipedia.org/wiki/Ran%C3%A7ongiciel). Sur tout type de système, une fausse manipulation peut supprimer l'ensemble de vos copies sur le serveur et sur les équipements qui synchronisent. Ce souci est aggravé par le fait que la synchronisation de suppression est en général plutôt instantanée.
 
-While the risk of false manipulation can be mitigated by desktop backup software such as TimeShift, the risk of false manipulation can only be mitigated by a backup on a hard drive. Only a backup on a disconnected external hard drive really protects you from ransomware.
+Si le risque de fausse manipulation peut être atténué via des logiciels de sauvegarde pour PC de bureau comme TimeShift, seule une sauvegarde sur un disque dur externe déconnecté vous protège vraiment des rançongiciels.
