--- a/i18n/it/docusaurus-plugin-content-docs/current/03.administer/20.backups/05.evaluate.md
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.administer/20.backups/05.evaluate.md
@@ -1,61 +1,61 @@
 ---
-title: Backup strategies
+title: Strategie di backup
 ---
 
-In the context of self-hosting, backups are an important element to compensate for unexpected events (fire, database corruption, loss of access to the server, compromised server...). The backup policy to implement depends on the importance of the services and data you manage. For example, backing up a test server will be of little interest, while you will want to be very careful if you are managing critical data for an association or a company - and in such cases, you will want to store the backups *in a different location or locations*.
+In un contesto di self hosting le strategie di backup sono un fattore chiave per sopperire ad eventi inattesi (incendio, corruzione del database, impossibilità di accedere al server, compromissione del server...). La tipologia di backup da adottare dipende dalla importanza dei dati e dei servizi che vogliamo proteggere. Ad esempio, nel contesto di un server di test possiamo evitare un backup integrale (dati e sistema operativo), al contrario, dovremo porre molta più attenzione nel caso di un server in produzione che contenga dati importanti. In questo caso è necessario conservare più copie di backup *in posti diversi*.
 
-## What is a good backup ?
+## Ottimizzare il backup
 
-A good backup consists of at least **3 copies of the data** (including the original data), on at least **2 separate storages**, in at least **2 separate locations** (far enough apart) and ideally with 2 separate methods. If your backups are encrypted **these rules also apply to the decryption phrase/key**.
+Un buon backuo consiste in almeno **tre copie dei dati** (compreso l'originale), salvate su almeno **due supporti distinti** che si trovano a loro volta **in due luoghi distinti** (sufficientemente lontani tra loro) e con due diversi sistemi di stoccaggio. Se il vostro backup è cifrato **questa regola aurea si applica anche alla password o frase di decifrazione**.
 
-A good backup is also in many cases, a recent backup, so it takes either a lot of rigor or to **automate** the process.
+Un buon backup deve anche essere recente, dovrete quindi essere molto precisi e quando possibile **automatizzare il processo**.
 
-A good backup is checked regularly to ensure the effectiveness and integrity of the data.
+Controllate sempre l'integrità del file di backup.
 
-Finally, a good backup is one that is **restorable within an acceptable timeframe** for you. Remember to document your restoration method and to estimate the transfer time of a copy, especially if the Internet connections involved are not symmetrical.
+Per ultimo, un buon backup **deve essere facilmente e velocemente accessibile**. Ricorda di documentare il metodo di recupero e di controllare la velocità delle connessioni in download specialmente se la connessione Internet non è simmetrica.
 
 :::info
-Example of **a robust and comfortable combination**:
+Esempi di **backup sicuro e facilmente recuperabile**.
 
-- a remote and automatic backup with borg
-- a backup on external disk and automatic with borg
-- a regular snapshot/image (and before updates)
-- a monitored RAID 1 array (or a commercial VPS that will also be on an array)
-- a decryption passphrase stored on 3 media in 2 locations
+- backup remoto e automatizzato con borg
+- backup automatizzato su unità locale esterna con borg
+- snapshot o immagine (eseguiti prima di ogni aggiornamento)
+- server monitorato con RAID 1 (o una VPS commerciale che può essere su un array)
+- password di decifratura salvata su (tre supporti e due luoghi diversi)
 :::
 
-## Some possible methods
+## Alcuni esempi di esecuzione del backup
 
-- [generate an archive and download it manually (default method of YunoHost)](/administer/backups/#manual-backup)
-- [backup automatically (recommended method)](/administer/backups/backup_methods)
-- [generate an archive directly on another disk](/administer/tutorials/external_storage)
-- [make a disk image or snapshot](/administer/backups/clone_filesystem)
-- [save useful data via a custom method](/administer/backups/custom_backup_methods)
+- [creare un file di backup e salvarlo manualmente (scelta di default per YunoHost)](/administer/backups/#manual-backup)
+- [backup automatizzato (scelta consigliata)](/administer/backups/backup_methods)
+- [backup su disco esterno](/administer/tutorials/external_storage)
+- [creazione di un'immagine o snapshot](/administer/backups/clone_filesystem)
+- [salvataggio dei dati con metodo personalizzato](/administer/backups/custom_backup_methods)
 
-## Risks
+## Rischi
 
-Below, a list of risks sorted from the most to the least probable, whose probability remains to be adapted according to your situation (location of the server, quality of the installations, user profiles, etc.). It is up to you to put the cursor where it should be, especially considering the consequences of a data loss.
+Di seguito un elenco di errori in ordine crescente di pericolosità. L'ordine proposto varia in base alla vostra situazione (tipo di server, complessità dell'installazione, permessi degli utenti), ponete attenzione alla vostra configurazione, avendo ben presenti le conseguenze di una possibile perdita dei dati.
 
 :::caution
-Keep in mind that real accidents are linked to the occurrence of 2 events simultaneously.
+Tenete presente che i rischi reali sono collegati all'evenienza di 2 eventi contemporanei
 :::
 
-- **Lack of rigor**: strategies based on manual backups require a lot of rigor in the regularity
-- **Bad handling**: it can happen that a backup is erased by mistake during a restoration or if you rely on a synchronization system, you could delete a file and the deletion would be synchronized instantly
-- **Cryptolocker**: this is a virus that encrypts files and demands a ransomware. If your users are using nextcloud and windows, an infected windows could synchronize encrypted files and thus you lose your copy.
-- **Hardware failure**: SD cards are the least reliable media over time (~2 years of life in a server), followed by SSD disks (about 3 years of life) and hard drives (3 years). Note that a new equipment has also probability to break down during the first 6 months. In all cases, your copies should not be on the same physical media.
-- **Software failure/bug**: a software bug may result in data deletion or you may not know how to fix a problem and want to restore your system.
-- **Electricity or internet failure**: do you have a plan if this happens? What if you are on vacation?
-- **Disaster or natural or unnatural event**: a small child, a cat, lightning or a simple leak can destroy your equipment. Fires or floods can also destroy your backup copy at the other end of your home...
-- **Server compromise**: a malicious person or a robot could attack your server and delete your data
-- **Machine theft**: a burglary or theft of a computer on which your password manager is located to decrypt your backups
-- **Search**: whether you are guilty or not, a search can result in the seizure of the entire computer equipment of a place (or even several)
-- **Death/health problem**: you may not be able to type your passphrase anymore
+- **Imprecisione**: i backup manuali richiedono rigore e regolarità
+- **Errata gestione**: cancellazione involontaria di un file di backup in un sistema di sincronizzazione client server di backup, cancellazione che si propaga instantaneamente
+- **Cryptolocker**: si tratta di virus che cifrano i file e chiedono un riscatto. Se i vostri utenti usano nextcloud e windows un sistema windows infetto può sincronizzare file cifrati perdendo così le copie di backup.
+- **Guasto hardware**: le schede SD sono i supporti meno affidabili nel tempo (si stima meno di 2 anni di vita in un server), seguite dai dischi SSD (circa 3 anni di vita) e i dischi HD (3 anni). Ricordate che neppure un'infrastruttura nuova è esente al 100% da guasti nei primi sei mesi di vita. In ogni caso le copie non devono stare sugli stessi supporti fisici.
+- **Bug software**: il malfunzionamento del software può portare alla perdita dei dati oppure potreste non sapere come risolvere un problema e quindi vorrete recuperare il vostro sistema.
+- **Assenza di energia elettrica o connessione**: prevedete un piano di azione se dovesse succedere...quando siete in vacanza.
+- **Catastrofi naturali e non**: un bambino o di un gatto, un fulmine o una perdita di acqua, incendio e inondazioni possono rovinare il vostro backup custodito nella stanza adiacente.
+- **Compromissione del server**: un attacco informatico diretto al vostro server potrebbe cancellarne i dati
+- **Furto**: nel caso di furto potreste perdere il software di gestione della password per decriptare il backup.
+- **Problemi legali**: per poter dimostrare la vostra innocenza i vostri pc potrebbero essere sequestrati, a casa vostra e altrove
+- **Decesso o malattia**: potreste non essere più in grado di digitare la vostra password
 
-## About Nextcloud or Thunderbird (IMAP) synchronization
+## Qualche info sulla sincronizzazione Nextcloud o Thunderbird (IMAP)
 
-A method that allows a partial backup is to backup files and emails via synchronization software like Nextcloud client or ThunderBird. This way, you avoid the risk of hardware failure.
+Un metodo per un parziale backup consiste nello salvare i file e le mail tramite dei programmi di sincronizzazione quali Nextcloud o Thunderbird. In questo modo eviterete le perdite dovute ad un guasto fisico.
 
-If this method is easy to set up, it is not without risk because of the synchronization itself. For example, if you are on Windows or Mac, you increase the risk of data loss following the encryption of files by a [cryptolocker](https://en.wikipedia.org/wiki/Ransomware) type virus. On any type of system, a false manipulation can delete all your copies on the server and on the equipment that synchronizes. This concern is aggravated by the fact that the deletion synchronization is usually rather instantaneous.
+La semplicità di tale operazione comporta qualche rischio intrinseco nella natura stessa del metodo, sopratutto se usato in ambiente mac o windows. Un [crytolocker](https://en.wikipedia.org/wiki/Ransomware) sul vostro pc porterebbe come conseguenza la perdita dei file sul server nextcloud, così come una involontaria cancellazione del file sul pc. Normalmente la sincronizzazione tra il pc e il server nextcloud è istantanea e quindi i danni sono irreparabili.
 
-While the risk of false manipulation can be mitigated by desktop backup software such as TimeShift, the risk of false manipulation can only be mitigated by a backup on a hard drive. Only a backup on a disconnected external hard drive really protects you from ransomware.
+Anche se il rischio di evento del genere può essere attenuato con programmi quali Timeshift, solo il backup su un supporto non connesso vi proteggerà dai crytolocker.
